mobile layout issues

--- a/_sass/_case-study.scss
+++ b/_sass/_case-study.scss
@@ -1,3 +1,22 @@
+.case-studies--home-wrapper {
+  background-image: url(/assets/mainimage.jpg);
+  padding: 60px 0;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100vw;
+  clear: both;
+  .case-studies--home {
+    max-width: $content-max-width;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 2.5%;
+    @media (max-width: 710px){
+      justify-content: space-around;
+    }
+  }
+}
+
 .case-studies--home,
 .case-studies--list {
   display: flex;
@@ -7,7 +26,7 @@
     width: 100%;
   }
 }
-$margin: calc(100vw-400px);
+
 .case-study--teaser:nth-of-type(1),
 .case-study--teaser:nth-of-type(2),
 .case-study--teaser:nth-of-type(3),
